--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
             padding: 0;
             font-family: "Segoe UI", Arial, sans-serif;
 
-            background-image: url("car.jpg");
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+            /* Используем ваше изображение как фон */
+            background-image: url("car.jpg"); /* путь к картинке */
+            background-size: cover; /* Покрывает весь экран */
+            background-position: center; /* Центрируем картинку */
+            background-repeat: no-repeat; /* Не повторяем картинку */
 
-            height: 100vh;
+            height: 100vh; /* Высота на весь экран */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -25,6 +26,7 @@
             animation: fadeInBody 1.2s ease;
         }
 
+        /* Анимация для плавного появления фона */
         @keyframes fadeInBody {
             from { opacity: 0; }
             to { opacity: 1; }
@@ -36,8 +38,7 @@
             top: 20px;
             width: 100%;
             display: flex;
-            flex-direction: column; /* Располагаем кнопки вертикально */
-            align-items: center; /* Центрируем кнопки по горизонтали */
+            justify-content: center;
             padding: 0 25px;
             box-sizing: border-box;
         }
@@ -55,7 +56,7 @@
             transition: background 0.25s, box-shadow 0.25s;
             width: 110px;
             text-align: center;
-            margin-bottom: 10px; /* Отступ между кнопками */
+            margin: 0 10px;
         }
 
         .top-btn:hover {
