--- a/index.html
+++ b/index.html
@@ -1,396 +1,284 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Пробег автомобиля</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Пробег автомобиля</title>
 
-    <style>
-        /* ==== ГЛОБАЛЬНЫЙ ФОН ==== */
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: "Segoe UI", Arial, sans-serif;
+<style>
+:root {
+    --bg-card: rgba(255,255,255,0.18);
+    --text-color: #fff;
+}
 
-            /* Используем ваше изображение как фон */
-            background-image: url("car.jpg"); /* путь к картинке */
-            background-size: cover; /* Покрывает весь экран */
-            background-position: center; /* Центрируем картинку */
-            background-repeat: no-repeat; /* Не повторяем картинку */
+body.dark {
+    --bg-card: rgba(0,0,0,0.55);
+    --text-color: #f1f1f1;
+}
 
-            height: 100vh; /* Высота на весь экран */
-            display: flex;
-            justify-content: center;
-            align-items: center;
+body {
+    margin: 0;
+    font-family: "Segoe UI", Arial, sans-serif;
+    background: url("car.jpg") center/cover no-repeat;
+    height: 100vh;
+    color: var(--text-color);
+}
 
-            animation: fadeInBody 1.2s ease;
-        }
+/* ===== TOP BAR ===== */
+.top-bar {
+    position: fixed;
+    top: 15px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 12px;
+    z-index: 10;
+}
 
-        /* Анимация для плавного появления фона */
-        @keyframes fadeInBody {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
+.top-btn {
+    padding: 8px 14px;
+    border-radius: 10px;
+    background: rgba(255,255,255,0.35);
+    border: 1px solid rgba(255,255,255,0.4);
+    color: white;
+    cursor: pointer;
+    backdrop-filter: blur(6px);
+}
 
-        /* ==== ВЕРХНЯЯ ПАНЕЛЬ ==== */
-        .top-bar {
-            position: absolute;
-            top: 20px;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            padding: 0 25px;
-            box-sizing: border-box;
-        }
+.top-btn:hover {
+    background: rgba(255,255,255,0.55);
+}
 
-        .top-btn {
-            background: rgba(255, 255, 255, 0.35);
-            padding: 10px 18px;
-            border-radius: 12px;
-            border: 1px solid rgba(255,255,255,0.5);
-            font-size: 16px;
-            cursor: pointer;
-            font-weight: 500;
-            color: #fff;
-            backdrop-filter: blur(8px);
-            transition: background 0.25s, box-shadow 0.25s;
-            width: 110px;
-            text-align: center;
-            margin: 0 10px;
-        }
+/* ===== USER INFO ===== */
+.user-info {
+    margin-top: 70px;
+    text-align: center;
+    font-size: 16px;
+}
 
-        .top-btn:hover {
-            background: rgba(255,255,255,0.55);
-            box-shadow: 0 0 12px rgba(255,255,255,0.6);
-        }
+.hidden { display: none; }
 
-        /* ==== Email пользователя ==== */
-        .user-email {
-            position: absolute;
-            top: 25px;
-            left: 50%;
-            transform: translateX(-50%);
-            color: white;
-            font-size: 16px;
-            font-weight: 500;
-            text-shadow: 0 0 6px rgba(0,0,0,0.5);
-        }
+/* ===== MAIN CARD ===== */
+.card {
+    margin: 25px auto;
+    background: var(--bg-card);
+    padding: 30px;
+    max-width: 380px;
+    border-radius: 18px;
+    backdrop-filter: blur(12px);
+    text-align: center;
+}
 
-        /* ==== КНОПКА ВЫЙТИ ВНИЗУ СПРАВА ==== */
-        .logout-btn {
-            position: fixed;
-            bottom: 25px;
-            right: 25px;
+/* ===== INPUT ===== */
+input {
+    width: 100%;
+    padding: 12px;
+    margin-bottom: 14px;
+    border-radius: 10px;
+    border: none;
+}
 
-            background: rgba(255, 255, 255, 0.35);
-            padding: 10px 18px;
-            border-radius: 12px;
-            border: 1px solid rgba(255,255,255,0.5);
-            font-size: 16px;
-            cursor: pointer;
-            color: #fff;
-            backdrop-filter: blur(8px);
-            transition: 0.25s;
-        }
+/* ===== BUTTON ===== */
+button.main {
+    width: 100%;
+    padding: 12px;
+    border-radius: 10px;
+    border: none;
+    background: linear-gradient(135deg,#6ba8ff,#005fcc);
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+}
 
-        .logout-btn:hover {
-            background: rgba(255,255,255,0.55);
-            box-shadow: 0 0 12px rgba(255,255,255,0.6);
-        }
+/* ===== HISTORY ===== */
+.history {
+    margin-top: 15px;
+    font-size: 14px;
+    text-align: left;
+}
 
-        /* ==== ГЛАВНАЯ КАРТОЧКА ==== */
-        .card {
-            background: rgba(255, 255, 255, 0.18);
-            padding: 35px 45px;
-            border-radius: 18px;
-            backdrop-filter: blur(12px) saturate(180%);
-            border: 1px solid rgba(255, 255, 255, 0.35);
+.history h3 {
+    text-align: center;
+}
 
-            text-align: center;
-            max-width: 360px;
-            width: 100%;
+.history ul {
+    padding-left: 18px;
+}
 
-            box-shadow: 0 8px 32px rgba(0,0,0,0.35);
-            animation: fadeUp 0.9s forwards ease-out;
-            transform: translateY(25px);
-            opacity: 0;
-        }
+/* ===== MODALS ===== */
+.overlay {
+    position: fixed;
+    inset: 0;
+    background: rgba(0,0,0,0.6);
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
 
-        @keyframes fadeUp {
-            to {
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
+.overlay.show { display: flex; }
 
-        h1 {
-            font-size: 26px;
-            margin-bottom: 15px;
-            color: #fff;
-            text-shadow: 0 0 6px rgba(0,0,0,0.4);
-        }
+.modal {
+    background: white;
+    padding: 25px;
+    border-radius: 14px;
+    width: 300px;
+    text-align: center;
+}
 
-        input {
-            width: 100%;
-            padding: 12px;
-            margin-bottom: 18px;
-            border-radius: 10px;
-            border: none;
-            font-size: 16px;
-            background: rgba(255,255,255,0.8);
-        }
+.modal input {
+    background: #f1f1f1;
+}
 
-        button {
-            width: 100%;
-            padding: 12px;
-            border: none;
-            border-radius: 10px;
-
-            background: linear-gradient(135deg, #6ba8ff, #005fcc);
-            color: white;
-            font-size: 18px;
-            cursor: pointer;
-            font-weight: bold;
-
-            box-shadow: 0 4px 18px rgba(0,0,0,0.25);
-            transition: background 0.25s, box-shadow 0.25s;
-        }
-
-        button:hover {
-            background: linear-gradient(135deg, #82b8ff, #1d6fe2);
-            box-shadow: 0 6px 22px rgba(0,0,0,0.35);
-        }
-
-        /* ==== МОДАЛКИ ==== */
-        .overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0,0,0,0.55);
-            display: none;
-            justify-content: center;
-            align-items: center;
-            backdrop-filter: blur(4px);
-            opacity: 0;
-            transition: opacity 0.35s ease;
-        }
-
-        .overlay.show {
-            display: flex;
-            opacity: 1;
-        }
-
-        .modal {
-            position: relative;
-            background: rgba(255, 255, 255, 0.9);
-            padding: 25px;
-            width: 320px;
-            border-radius: 16px;
-            backdrop-filter: blur(10px);
-            text-align: center;
-            box-shadow: 0 10px 35px rgba(0, 0, 0, 0.35);
-
-            transform: translateY(20px);
-            opacity: 0;
-            animation: fadeUp 0.4s forwards ease-out;
-        }
-
-        .close-btn {
-            position: absolute;
-            top: 10px;
-            right: 14px;
-            font-size: 26px;
-            cursor: pointer;
-            transition: 0.2s;
-        }
-
-        .close-btn:hover {
-            transform: scale(1.15);
-        }
-
-        .error {
-            color: rgb(255, 60, 60);
-            min-height: 18px;
-        }
-
-        .hidden { display: none; }
-    </style>
+.error {
+    color: red;
+    font-size: 14px;
+}
+</style>
 </head>
 
 <body>
 
-    <!-- Верхняя панель -->
-    <div class="top-bar">
-        <button class="top-btn" id="openLoginBtn">Войти</button>
-        <button class="top-btn" id="openRegisterBtn">Создать</button>
+<!-- TOP BAR -->
+<div class="top-bar">
+    <button class="top-btn" id="loginBtn">Войти</button>
+    <button class="top-btn" id="registerBtn">Создать</button>
+    <button class="top-btn hidden" id="logoutBtn">Выйти</button>
+    <button class="top-btn" id="themeBtn">🌙</button>
+</div>
+
+<!-- USER INFO -->
+<div class="user-info hidden" id="userInfo">
+    Вы вошли: <b id="userEmail"></b>
+</div>
+
+<!-- MAIN CARD -->
+<div class="card">
+    <h2>Введите пробег</h2>
+    <form id="mileageForm">
+        <input type="number" id="mileage" placeholder="Пробег в км" required>
+        <button class="main">Сохранить</button>
+    </form>
+
+    <div class="history hidden" id="history">
+        <h3>Последние данные по пробегу</h3>
+        <ul id="historyList"></ul>
     </div>
+</div>
 
-    <!-- Email пользователя -->
-    <div class="user-email hidden" id="userEmail"></div>
-
-    <!-- Кнопка "Выйти" -->
-    <button class="logout-btn hidden" id="logoutBtn">Выйти</button>
-
-    <!-- Главная карточка -->
-    <div class="card">
-        <h1>Введите пробег</h1>
-
-        <form id="mileageForm">
-            <input type="number" id="mileage" placeholder="Пробег в км" required>
-            <button type="submit">Сохранить</button>
-        </form>
+<!-- LOGIN MODAL -->
+<div class="overlay" id="loginModal">
+    <div class="modal">
+        <h3>Вход</h3>
+        <input id="loginEmail" placeholder="Email">
+        <input id="loginPass" type="password" placeholder="Пароль">
+        <button class="main" id="loginSubmit">Войти</button>
+        <p class="error" id="loginError"></p>
     </div>
+</div>
 
-    <!-- Модалка входа -->
-    <div id="authOverlay" class="overlay">
-        <div class="modal">
-            <div class="close-btn" id="closeAuth">×</div>
-
-            <h2>Войти</h2>
-            <input type="email" id="authEmail" placeholder="Email">
-            <input type="password" id="authPassword" placeholder="Пароль">
-
-            <button id="authLoginBtn">Войти</button>
-            <p id="authError" class="error"></p>
-        </div>
+<!-- REGISTER MODAL -->
+<div class="overlay" id="registerModal">
+    <div class="modal">
+        <h3>Регистрация</h3>
+        <input id="regEmail" placeholder="Email">
+        <input id="regPass" type="password" placeholder="Пароль">
+        <button class="main" id="regSubmit">Создать</button>
+        <p class="error" id="regError"></p>
     </div>
+</div>
 
-    <!-- Модалка регистрации -->
-    <div id="registerOverlay" class="overlay">
-        <div class="modal">
-            <div class="close-btn" id="closeRegister">×</div>
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
+import { getFirestore, collection, addDoc, query, where, orderBy, limit, getDocs } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
 
-            <h2>Создать аккаунт</h2>
-            <input type="email" id="regEmail" placeholder="Email">
-            <input type="password" id="regPassword" placeholder="Пароль">
+const firebaseConfig = {
+ apiKey: "AIzaSyCuTQ4a2znu4NezpilyL2QAyMQHt5SAozE",
+ authDomain: "focus3-df69e.firebaseapp.com",
+ projectId: "focus3-df69e"
+};
 
-            <button id="regCreateBtn">Создать</button>
-            <p id="regError" class="error"></p>
-        </div>
-    </div>
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
 
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-        import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
-        import {
-            getAuth,
-            signInWithEmailAndPassword,
-            createUserWithEmailAndPassword,
-            signOut,
-            onAuthStateChanged
-        } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
+/* ===== THEME ===== */
+const themeBtn = document.getElementById("themeBtn");
+if (localStorage.theme === "dark") document.body.classList.add("dark");
 
-        /* Firebase */
-        const firebaseConfig = {
-            apiKey: "AIzaSyCuTQ4a2znu4NezpilyL2QAyMQHt5SAozE",
-            authDomain: "focus3-df69e.firebaseapp.com",
-            projectId: "focus3-df69e",
-            storageBucket: "focus3-df69e.appspot.com",
-            messagingSenderId: "820116608318",
-            appId: "1:820116608318:web:927be143470b2aa885c86f"
-        };
+themeBtn.onclick = () => {
+ document.body.classList.toggle("dark");
+ localStorage.theme = document.body.classList.contains("dark") ? "dark" : "light";
+};
 
-        const app = initializeApp(firebaseConfig);
-        const db = getFirestore(app);
-        const auth = getAuth(app);
+/* ===== AUTH STATE ===== */
+onAuthStateChanged(auth, async user => {
+ if (user) {
+   userEmail.textContent = user.email;
+   userInfo.classList.remove("hidden");
+   logoutBtn.classList.remove("hidden");
+   loginBtn.classList.add("hidden");
+   registerBtn.classList.add("hidden");
+   await loadHistory(user.email);
+ } else {
+   userInfo.classList.add("hidden");
+   history.classList.add("hidden");
+   logoutBtn.classList.add("hidden");
+   loginBtn.classList.remove("hidden");
+   registerBtn.classList.remove("hidden");
+ }
+});
 
-        /* Элементы */
-        const loginBtn = document.getElementById("openLoginBtn");
-        const registerBtn = document.getElementById("openRegisterBtn");
-        const logoutBtn = document.getElementById("logoutBtn");
-        const userEmailDiv = document.getElementById("userEmail");
+/* ===== HISTORY ===== */
+async function loadHistory(email) {
+ historyList.innerHTML = "";
+ const q = query(
+   collection(db,"mileages"),
+   where("user","==",email),
+   orderBy("date","desc"),
+   limit(5)
+ );
+ const snap = await getDocs(q);
+ snap.forEach(d => {
+   const li = document.createElement("li");
+   const data = d.data();
+   li.textContent = `${data.mileage} км — ${data.date.slice(0,10)}`;
+   historyList.appendChild(li);
+ });
+ history.classList.remove("hidden");
+}
 
-        const authOverlay = document.getElementById("authOverlay");
-        const registerOverlay = document.getElementById("registerOverlay");
+/* ===== EVENTS ===== */
+loginBtn.onclick = () => loginModal.classList.add("show");
+registerBtn.onclick = () => registerModal.classList.add("show");
 
-        /* ===== Отображение состояния входа ===== */
-        onAuthStateChanged(auth, (user) => {
-            if (user) {
-                // показываем email
-                userEmailDiv.textContent = user.email;
-                userEmailDiv.classList.remove("hidden");
+loginSubmit.onclick = async () => {
+ try {
+   await signInWithEmailAndPassword(auth, loginEmail.value, loginPass.value);
+   loginModal.classList.remove("show");
+ } catch(e){ loginError.textContent = e.message }
+};
 
-                // скрываем кнопки "Войти" и "Создать"
-                loginBtn.classList.add("hidden");
-                registerBtn.classList.add("hidden");
+regSubmit.onclick = async () => {
+ try {
+   await createUserWithEmailAndPassword(auth, regEmail.value, regPass.value);
+   registerModal.classList.remove("show");
+ } catch(e){ regError.textContent = e.message }
+};
 
-                // показываем ВЫЙТИ
-                logoutBtn.classList.remove("hidden");
+logoutBtn.onclick = () => signOut(auth);
 
-            } else {
-                // скрываем email
-                userEmailDiv.classList.add("hidden");
-
-                // показываем кнопки входа
-                loginBtn.classList.remove("hidden");
-                registerBtn.classList.remove("hidden");
-
-                // скрываем ВЫЙТИ
-                logoutBtn.classList.add("hidden");
-            }
-        });
-
-        /* ===== Открытие модалок ===== */
-        loginBtn.onclick = () => authOverlay.classList.add("show");
-        registerBtn.onclick = () => registerOverlay.classList.add("show");
-
-        /* ===== Закрытие модалок ===== */
-        document.getElementById("closeAuth").onclick = () =>
-            authOverlay.classList.remove("show");
-
-        document.getElementById("closeRegister").onclick = () =>
-            registerOverlay.classList.remove("show");
-
-        /* ===== Вход ===== */
-        document.getElementById("authLoginBtn").onclick = async () => {
-            try {
-                await signInWithEmailAndPassword(auth, authEmail.value, authPassword.value);
-                authOverlay.classList.remove("show");
-            } catch (err) {
-                authError.textContent = err.message;
-            }
-        };
-
-        /* ===== Регистрация ===== */
-        document.getElementById("regCreateBtn").onclick = async () => {
-            try {
-                await createUserWithEmailAndPassword(auth, regEmail.value, regPassword.value);
-                registerOverlay.classList.remove("show");
-            } catch (err) {
-                regError.textContent = err.message;
-            }
-        };
-
-        /* ===== Выход ===== */
-        logoutBtn.onclick = async () => {
-            await signOut(auth);
-            alert("Вы вышли");
-        };
-
-        /* ===== Сохранение пробега ===== */
-        document.getElementById("mileageForm").onsubmit = async (e) => {
-            e.preventDefault();
-
-            const user = auth.currentUser;
-            if (!user) {
-                alert("Сначала войдите");
-                return;
-            }
-
-            const mileageValue = Number(document.getElementById("mileage").value);
-
-            await addDoc(collection(db, "mileages"), {
-                mileage: mileageValue,
-                user: user.email,
-                date: new Date().toISOString()
-            });
-
-            alert("Пробег сохранён!");
-            window.location.reload();
-        };
-    </script>
-
+mileageForm.onsubmit = async e => {
+ e.preventDefault();
+ if (!auth.currentUser) return alert("Сначала войдите");
+ await addDoc(collection(db,"mileages"),{
+   mileage: Number(mileage.value),
+   user: auth.currentUser.email,
+   date: new Date().toISOString()
+ });
+ mileage.value = "";
+ await loadHistory(auth.currentUser.email);
+};
+</script>
 </body>
 </html>
