--- a/index.html
+++ b/index.html
@@ -7,131 +7,132 @@
 
 <style>
 :root {
-    --bg-card: rgba(255,255,255,0.18);
-    --text-color: #fff;
+  --card-bg: rgba(255,255,255,0.18);
+  --text: #fff;
 }
 
 body.dark {
-    --bg-card: rgba(0,0,0,0.55);
-    --text-color: #f1f1f1;
+  --card-bg: rgba(0,0,0,0.6);
+  --text: #f1f1f1;
 }
 
 body {
-    margin: 0;
-    font-family: "Segoe UI", Arial, sans-serif;
-    background: url("car.jpg") center/cover no-repeat;
-    height: 100vh;
-    color: var(--text-color);
+  margin: 0;
+  font-family: Segoe UI, Arial, sans-serif;
+  background: url("car.jpg") center/cover no-repeat;
+  height: 100vh;
+  color: var(--text);
 }
 
 /* ===== TOP BAR ===== */
 .top-bar {
-    position: fixed;
-    top: 15px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    gap: 12px;
-    z-index: 10;
+  position: fixed;
+  top: 15px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  z-index: 100;
 }
 
 .top-btn {
-    padding: 8px 14px;
-    border-radius: 10px;
-    background: rgba(255,255,255,0.35);
-    border: 1px solid rgba(255,255,255,0.4);
-    color: white;
-    cursor: pointer;
-    backdrop-filter: blur(6px);
-}
-
-.top-btn:hover {
-    background: rgba(255,255,255,0.55);
-}
-
-/* ===== USER INFO ===== */
-.user-info {
-    margin-top: 70px;
-    text-align: center;
-    font-size: 16px;
+  padding: 8px 14px;
+  border-radius: 10px;
+  border: 1px solid rgba(255,255,255,.4);
+  background: rgba(255,255,255,.35);
+  color: #fff;
+  cursor: pointer;
 }
 
 .hidden { display: none; }
 
-/* ===== MAIN CARD ===== */
+/* ===== USER ===== */
+.user-info {
+  margin-top: 70px;
+  text-align: center;
+  font-size: 16px;
+}
+
+/* ===== CARD ===== */
 .card {
-    margin: 25px auto;
-    background: var(--bg-card);
-    padding: 30px;
-    max-width: 380px;
-    border-radius: 18px;
-    backdrop-filter: blur(12px);
-    text-align: center;
+  margin: 20px auto;
+  max-width: 380px;
+  background: var(--card-bg);
+  padding: 30px;
+  border-radius: 18px;
+  backdrop-filter: blur(12px);
+  text-align: center;
 }
 
 /* ===== INPUT ===== */
 input {
-    width: 100%;
-    padding: 12px;
-    margin-bottom: 14px;
-    border-radius: 10px;
-    border: none;
+  width: 100%;
+  padding: 12px;
+  border-radius: 10px;
+  border: none;
+  margin-bottom: 12px;
 }
 
 /* ===== BUTTON ===== */
 button.main {
-    width: 100%;
-    padding: 12px;
-    border-radius: 10px;
-    border: none;
-    background: linear-gradient(135deg,#6ba8ff,#005fcc);
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
+  width: 100%;
+  padding: 12px;
+  border-radius: 10px;
+  border: none;
+  background: linear-gradient(135deg,#6ba8ff,#005fcc);
+  color: white;
+  cursor: pointer;
 }
 
 /* ===== HISTORY ===== */
 .history {
-    margin-top: 15px;
-    font-size: 14px;
-    text-align: left;
+  margin-top: 15px;
+  font-size: 14px;
+  text-align: left;
 }
 
 .history h3 {
-    text-align: center;
+  text-align: center;
 }
 
 .history ul {
-    padding-left: 18px;
+  padding-left: 18px;
 }
 
-/* ===== MODALS ===== */
+/* ===== MODAL ===== */
 .overlay {
-    position: fixed;
-    inset: 0;
-    background: rgba(0,0,0,0.6);
-    display: none;
-    justify-content: center;
-    align-items: center;
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,.6);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 200;
 }
 
 .overlay.show { display: flex; }
 
 .modal {
-    background: white;
-    padding: 25px;
-    border-radius: 14px;
-    width: 300px;
-    text-align: center;
+  background: white;
+  color: #000;
+  padding: 25px;
+  width: 300px;
+  border-radius: 14px;
+  position: relative;
+  text-align: center;
 }
 
-.modal input {
-    background: #f1f1f1;
+.close {
+  position: absolute;
+  top: 8px;
+  right: 12px;
+  font-size: 22px;
+  cursor: pointer;
 }
 
 .error {
-    color: red;
-    font-size: 14px;
+  color: red;
+  font-size: 14px;
 }
 </style>
 </head>
@@ -140,57 +141,57 @@ button.main {
 
 <!-- TOP BAR -->
 <div class="top-bar">
-    <button class="top-btn" id="loginBtn">Войти</button>
-    <button class="top-btn" id="registerBtn">Создать</button>
-    <button class="top-btn hidden" id="logoutBtn">Выйти</button>
-    <button class="top-btn" id="themeBtn">🌙</button>
+  <button class="top-btn" id="loginBtn">Войти</button>
+  <button class="top-btn" id="registerBtn">Создать</button>
+  <button class="top-btn hidden" id="logoutBtn">Выйти</button>
+  <button class="top-btn" id="themeBtn">🌙</button>
 </div>
 
-<!-- USER INFO -->
 <div class="user-info hidden" id="userInfo">
-    Вы вошли: <b id="userEmail"></b>
+  Вы вошли: <b id="userEmail"></b>
 </div>
 
-<!-- MAIN CARD -->
 <div class="card">
-    <h2>Введите пробег</h2>
-    <form id="mileageForm">
-        <input type="number" id="mileage" placeholder="Пробег в км" required>
-        <button class="main">Сохранить</button>
-    </form>
+  <h2>Введите пробег</h2>
+  <form id="mileageForm">
+    <input type="number" id="mileage" placeholder="Пробег в км" required>
+    <button class="main">Сохранить</button>
+  </form>
 
-    <div class="history hidden" id="history">
-        <h3>Последние данные по пробегу</h3>
-        <ul id="historyList"></ul>
-    </div>
+  <div class="history hidden" id="history">
+    <h3>Последние 5 записей</h3>
+    <ul id="historyList"></ul>
+  </div>
 </div>
 
-<!-- LOGIN MODAL -->
+<!-- LOGIN -->
 <div class="overlay" id="loginModal">
-    <div class="modal">
-        <h3>Вход</h3>
-        <input id="loginEmail" placeholder="Email">
-        <input id="loginPass" type="password" placeholder="Пароль">
-        <button class="main" id="loginSubmit">Войти</button>
-        <p class="error" id="loginError"></p>
-    </div>
+  <div class="modal">
+    <span class="close" onclick="loginModal.classList.remove('show')">×</span>
+    <h3>Вход</h3>
+    <input id="loginEmail" placeholder="Email">
+    <input id="loginPass" type="password" placeholder="Пароль">
+    <button class="main" id="loginSubmit">Войти</button>
+    <p class="error" id="loginError"></p>
+  </div>
 </div>
 
-<!-- REGISTER MODAL -->
+<!-- REGISTER -->
 <div class="overlay" id="registerModal">
-    <div class="modal">
-        <h3>Регистрация</h3>
-        <input id="regEmail" placeholder="Email">
-        <input id="regPass" type="password" placeholder="Пароль">
-        <button class="main" id="regSubmit">Создать</button>
-        <p class="error" id="regError"></p>
-    </div>
+  <div class="modal">
+    <span class="close" onclick="registerModal.classList.remove('show')">×</span>
+    <h3>Регистрация</h3>
+    <input id="regEmail" placeholder="Email">
+    <input id="regPass" type="password" placeholder="Пароль">
+    <button class="main" id="regSubmit">Создать</button>
+    <p class="error" id="regError"></p>
+  </div>
 </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
 import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
-import { getFirestore, collection, addDoc, query, where, orderBy, limit, getDocs } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+import { getFirestore, collection, addDoc, getDocs } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
 
 const firebaseConfig = {
  apiKey: "AIzaSyCuTQ4a2znu4NezpilyL2QAyMQHt5SAozE",
@@ -203,15 +204,13 @@ const auth = getAuth(app);
 const db = getFirestore(app);
 
 /* ===== THEME ===== */
-const themeBtn = document.getElementById("themeBtn");
 if (localStorage.theme === "dark") document.body.classList.add("dark");
-
 themeBtn.onclick = () => {
  document.body.classList.toggle("dark");
  localStorage.theme = document.body.classList.contains("dark") ? "dark" : "light";
 };
 
-/* ===== AUTH STATE ===== */
+/* ===== AUTH ===== */
 onAuthStateChanged(auth, async user => {
  if (user) {
    userEmail.textContent = user.email;
@@ -232,25 +231,33 @@ onAuthStateChanged(auth, async user => {
 /* ===== HISTORY ===== */
 async function loadHistory(email) {
  historyList.innerHTML = "";
- const q = query(
-   collection(db,"mileages"),
-   where("user","==",email),
-   orderBy("date","desc"),
-   limit(5)
- );
- const snap = await getDocs(q);
- snap.forEach(d => {
-   const li = document.createElement("li");
-   const data = d.data();
-   li.textContent = `${data.mileage} км — ${data.date.slice(0,10)}`;
-   historyList.appendChild(li);
- });
- history.classList.remove("hidden");
+ try {
+   const snap = await getDocs(collection(db,"mileages"));
+   const data = [];
+   snap.forEach(d => {
+     const v = d.data();
+     if (v.user === email) data.push(v);
+   });
+   data
+     .sort((a,b) => b.date.localeCompare(a.date))
+     .slice(0,5)
+     .forEach(v => {
+       const li = document.createElement("li");
+       li.textContent = `${v.mileage} км — ${new Date(v.date).toLocaleDateString()}`;
+       historyList.appendChild(li);
+     });
+   history.classList.remove("hidden");
+ } catch(e) {
+   console.error(e);
+ }
 }
 
 /* ===== EVENTS ===== */
 loginBtn.onclick = () => loginModal.classList.add("show");
 registerBtn.onclick = () => registerModal.classList.add("show");
+
+loginModal.onclick = e => e.target === loginModal && loginModal.classList.remove("show");
+registerModal.onclick = e => e.target === registerModal && registerModal.classList.remove("show");
 
 loginSubmit.onclick = async () => {
  try {
@@ -280,5 +287,6 @@ mileageForm.onsubmit = async e => {
  await loadHistory(auth.currentUser.email);
 };
 </script>
+
 </body>
 </html>
